# feophant

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  codecov.yml  debug.sh
.github/workflows/: check-and-lint.yaml  release-packaging.yaml  test.yaml  test_source_coverage.yaml
benches/: feophant_benchmark.rs
docs/: CNAME  _config.yml  index.md
src/: async_helper.rs  async_helpers.rs  codec.rs  constants.rs  engine.rs  feophant.rs  lib.rs  main.rs  parser.rs  processor.rs  protocol.rs
src/codec/: network_frame.rs  pg_codec.rs
src/constants/: builtin_sql_types.rs  nullable.rs  page_settings.rs  page_size.rs  pg_error_codes.rs  pg_error_levels.rs  system_tables.rs  table_definitions.rs  type_definitions.rs
src/constants/system_tables/: pg_attribute.rs  pg_class.rs  pg_constraint.rs  pg_index.rs
src/engine/: analyzer.rs  commands.rs  executor.rs  io.rs  objects.rs  planner.rs  rewrite_processor.rs  rewriter.rs  sql_parser.rs  test_objects.rs  transaction_generator.rs  transactions.rs
src/engine/analyzer/: definition_lookup.rs
src/engine/commands/: definition_lookup.rs  full_table_scan.rs  type_lookup.rs
src/engine/executor/: definition_lookup.rs  full_table_scan.rs  type_lookup.rs
src/engine/io/: block_layer.rs  constraint_manager.rs  encoded_size.rs  file_manager.rs  format_traits.rs  formats.rs  free_space_manager.rs  index_formats.rs  index_manager.rs  index_row_manager.rs  io_manager.rs  layer_design.md  lock_cache_manager.rs  lock_manager.rs  page_cache_manager.rs  page_formats.rs  page_manager.rs  row_formats.rs  row_manager.rs  utility.rs  visible_row_manager.rs
src/engine/objects/: attribute.rs  constraint.rs  constraints.rs  index.rs  parse_expression.rs  parse_tree.rs  pg_attribute.rs  pg_table.rs  plan_tree.rs  planned_statement.rs  query_result.rs  query_tree.rs  sql_tuple.rs  sql_type.rs  table.rs  transaction_id.rs  types.rs
src/engine/records/: row.rs
src/parser/: message.rs
src/processor/: client_processor.rs  ssl_and_gssapi_parser.rs  startup_parser.rs
src/protocol/: client_request.rs  connection.rs  connection_handler.rs  frame.rs  network_frame.rs  parser.rs  parser_error.rs  process_frame.rs  session_state.rs
tests/: create_table.rs  sql_create_table.rs  sql_garbage.rs  sql_primary_key_insert.rs  sql_simple_insert.rs  sql_simple_select.rs  visibility_tests.rs
tests/common/: mod.rs
(+66 files in other folders)
