[package]
name = "feophant"
version = "0.3.0"
authors = ["Christopher Hotchkiss <christopher.hotchkiss@gmail.com>"]
edition = "2018"

[dev-dependencies]
tokio-test = "0.4.2"

[dependencies]
async-stream = "0.3.2"
bitflags = "1.2.1"
hex-literal = "0.3.1"
bytes = "1"
futures = "0.3"
log = "0.4"
nom = "6"
simplelog = "^0.10.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6.6", features = ["codec"] }
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }