[package]
name = "feophant"
description = "A SQL database server written in Rust and inspired by PostreSQL"
authors = ["Christopher Hotchkiss <christopher.hotchkiss@gmail.com>"]
homepage = "https://feophant.com"
repository = "https://github.com/chotchki/feophant"
keywords = ["sql", "database", "feophant"]
categories = ["database-implementations"]
license = "AGPL-3.0-or-later"
version = "0.8.0"
edition = "2018"
exclude = [
    "docs/*",
]

[lib]
name = "feophantlib"
path = "src/lib.rs"

[[bin]]
name = "feophant-server"
path = "src/main.rs"

[[bench]]
name = "feophant_benchmark"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }
#Useful for debugging raw pages
#pretty-hex = "0.2.1"
tokio-postgres = "0.7.2"
tempfile = "3"
tokio-test = "0.4.2"

[dependencies]
async-stream = "0.3.2"
bitflags = "1.2.1"
bytes = "1"
futures = "0.3"
hex-literal = "0.3.1"
lru = "0.6.6"
nom = "6"
log = "0.4"
simplelog = "^0.10.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6.6", features = ["codec"] }
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }


